@@ -1,5 +1,10 @@
 2004-10-18  Shaun McCance  <shaunm@gnome.org>
 
+	* data/yelp.schemas.in:
+	- Forgot to add this to CVS
+
+2004-10-18  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-man-parser.c:
 	- Small fix for TP tag from Don Scorgie
 
